# systemd-journal-sdk

./: .bandit  .codacy.yaml  .codacy.yml  .gitignore  AGENTS.md  PROVENANCE.md  README.md  SOW-status.md
.agents/sow/: SOW-status.md  SOW.template.md  audit.sh
.github/workflows/: codacy-sarif.yml  codeql.yml  coverage.yml  docs-examples.yml  wiki.yml
docs/: API-Overview.md  Explorer-And-Netdata-Queries.md  Getting-Started.md  Go-API.md  Home.md  Hot-Path-Guide.md  Journalctl-CLI.md  Node-API.md  Options-Reference.md  Production-Profiles.md  Python-API.md  Reader-APIs.md  Rust-API.md  Rust-Crates-And-Packages.md  Wiki-Publishing.md  Writer-APIs.md  _Sidebar.md
documentation/: code-scanning.md
experiments/: README.md
experiments/node/: README.md  package.json
experiments/python/: README.md  pyproject.toml  test_all.py  test_directory_writer_lifecycle.py  test_explorer.py  test_support.py  test_verify_seal.py  test_writer_core.py
experiments/python/journal/: binary.py  compress.py  directory_reader.py  entry.py  explorer.py  fss.py  hash.py  header.py  lock.py  reader.py  writer_arena.py  writer_file_mode.py  writer_open.py  writer_sealing.py
fixtures/systemd/: INVENTORY.md
go/: API.md  README.md  go.mod  go.sum
go/adapter/: complex_match.go  (+2 more)
node/: .npmrc  README.md  index.d.ts  package-lock.json  package.json
python/: README.md  __init__.py  adapter.py  test_all.py  test_directory_writer_basic.py  test_directory_writer_lifecycle.py  test_explorer.py  test_netdata.py  test_reader_facade.py  test_support.py  test_verify_seal.py  test_writer_core.py
rust/: Cargo.toml  README.md
rust/src/adapter/: Cargo.toml  helpers.rs  main.rs
rust/src/cmd/journalctl/: Cargo.toml  main.rs  output.rs
rust/src/crates/jf/: .gitignore  Cargo.toml
rust/src/crates/jf/error/: Cargo.toml
rust/src/crates/jf/error/src/: lib.rs
rust/src/crates/jf/journal_file/: Cargo.toml
rust/src/crates/jf/journal_file/src/: cursor.rs  file.rs  filter.rs  journal_file.rs  lib.rs  object.rs  offset_array.rs  reader.rs  writer.rs
rust/src/crates/jf/journal_file/src/file/: iterators.rs  matchers.rs  tests.rs
rust/src/crates/jf/journal_reader_ffi/: Cargo.toml
rust/src/crates/jf/sigbus/: Cargo.toml
rust/src/crates/jf/sigbus/src/: lib.rs
rust/src/crates/jf/window_manager/: Cargo.toml
rust/src/crates/jf/window_manager/src/: lib.rs
rust/src/crates/journal-common/: Cargo.toml
rust/src/crates/journal-common/src/: lib.rs  system.rs  time.rs
rust/src/crates/journal-core/: Cargo.toml
rust/src/crates/journal-core/src/: error.rs  field_map.rs  fss.rs  lib.rs  seal.rs
rust/src/crates/journal-core/src/file/: cursor.rs  file.rs  file_iterators.rs  file_mut.rs  file_payload.rs  file_tests.rs  filter.rs  guarded_cell.rs  hash.rs  lock.rs  mmap.rs  mod.rs  object.rs  object_compression.rs  object_hash.rs  offset_array.rs  reader.rs  row_view.rs  sigbus.rs  writer.rs  writer_entry_arrays.rs  writer_seal.rs  writer_seal_tests.rs  writer_structured_tests.rs  writer_tests.rs
rust/src/crates/journal-engine/: Cargo.toml
rust/src/crates/journal-engine/examples/: index.rs
rust/src/crates/journal-engine/src/: cache.rs  facets.rs  histogram.rs  indexing.rs
rust/src/crates/journal-engine/src/logs/: query.rs  table.rs  transformations.rs
rust/src/crates/journal-engine/tests/: multi_file_pagination.rs
rust/src/crates/journal-host/: Cargo.toml
rust/src/crates/journal-host/src/: lib.rs  state.rs
rust/src/crates/journal-host/src/platform/: freebsd.rs  linux.rs  macos.rs  other.rs  windows.rs
rust/src/crates/journal-index/: Cargo.toml
rust/src/crates/journal-index/src/: field_types.rs  file_index.rs  file_indexer.rs  filter.rs
rust/src/crates/journal-index/tests/: pagination.rs
rust/src/crates/journal-log-writer/: Cargo.toml
rust/src/crates/journal-log-writer/src/: error.rs  lib.rs
rust/src/crates/journal-log-writer/src/log/: chain.rs  config.rs  helpers.rs  mod.rs  serde_api_tests.rs  startup.rs
rust/src/crates/journal-log-writer/tests/: log_writer.rs
rust/src/crates/journal-log-writer/tests/log_writer/: entries_policy.rs  lifecycle.rs  naming.rs  rotation_retention.rs
rust/src/crates/journal-registry/: Cargo.toml
rust/src/crates/journal-registry/src/registry/: mod.rs
rust/src/crates/journal-registry/src/repository/: collection.rs  file.rs  mod.rs
rust/src/crates/rdp/: Cargo.toml
rust/src/crates/rdp/src/: lib.rs
rust/src/internal/testcmd/corpus_digest/: Cargo.toml
rust/src/internal/testcmd/corpus_digest/src/: main.rs
rust/src/internal/testcmd/corpus_experiment/: Cargo.toml
rust/src/internal/testcmd/corpus_experiment/src/: main.rs
rust/src/internal/testcmd/corpus_regenerate/: Cargo.toml
rust/src/internal/testcmd/corpus_regenerate/src/: main.rs
rust/src/internal/testcmd/dataset_ingester/: Cargo.toml
rust/src/internal/testcmd/dataset_ingester/src/: main.rs
rust/src/internal/testcmd/explorer_query_baseline/: Cargo.toml
rust/src/internal/testcmd/explorer_query_baseline/src/: main.rs
rust/src/internal/testcmd/explorer_query_contract/: Cargo.toml
rust/src/internal/testcmd/explorer_query_contract/src/: lib.rs
rust/src/internal/testcmd/explorer_query_optimized/: Cargo.toml
rust/src/internal/testcmd/explorer_query_optimized/src/: main.rs
rust/src/internal/testcmd/livewriter/: Cargo.toml
rust/src/internal/testcmd/livewriter/src/: main.rs
rust/src/internal/testcmd/netdata_function_wrapper/: Cargo.toml
rust/src/internal/testcmd/netdata_function_wrapper/src/: main.rs
rust/src/internal/testcmd/reader_core_bench/: Cargo.toml
rust/src/internal/testcmd/reader_core_bench/src/: main.rs
rust/src/internal/testcmd/writer_core_bench/: Cargo.toml
rust/src/internal/testcmd/writer_core_bench/src/: main.rs
rust/src/journal/: Cargo.toml
rust/src/journal/src/: directory.rs  explorer.rs  export.rs  facade.rs  lib.rs  netdata.rs  parse.rs  reader_helpers.rs  sealed_verify.rs  tests.rs  verify_graph.rs
rust/src/journal/src/tests/: facade.rs  verification.rs
rust/src/journal/src/verify_graph/: hash.rs  header.rs  io.rs  validation.rs  walk.rs
(+668 files in other folders)
