[package]
name = "adapter"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure-Rust conformance adapter for systemd journal SDK"
license.workspace = true

[[bin]]
name = "adapter"
path = "main.rs"

[dependencies]
journal = { package = "systemd-journal-sdk", path = "../journal" }
journal-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ruzstd = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
