[package]
name = "journal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure-Rust systemd journal reader and writer SDK"
license.workspace = true

[dependencies]
# Internal crates
journal-core = { workspace = true }
journal-common = { workspace = true }
journal-registry = { workspace = true }
journal-log-writer = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Memory mapping
memmap2 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
hex = { workspace = true }
ouroboros = { workspace = true }

# Compression
ruzstd = { workspace = true }
lz4_flex = { workspace = true }
lzma-rust2 = { workspace = true }

# Cryptography for sealed verification
hmac = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
