[package]
license = "GPL-3.0-or-later"
name = "journal-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
allocative = ["dep:allocative"]

[dependencies]
rustc-hash = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nix = { workspace = true, features = ["time"] }
allocative = { workspace = true, optional = true }
