[package]
license = "GPL-3.0-or-later"
name = "journal-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
allocative = ["dep:allocative"]

[dependencies]
rustc-hash = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
allocative = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_WindowsProgramming"] }
