[package]
name = "systemd-journal-sdk-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared types and utilities for the pure Rust systemd journal SDK"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/systemd-journal-sdk-common"
readme = "../../../README.md"
keywords = ["systemd", "journal", "logging", "sdk"]
categories = ["filesystem", "parser-implementations"]

[lib]
name = "journal_common"

[lints]
workspace = true

[features]
allocative = ["dep:allocative"]

[dependencies]
rustc-hash = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
allocative = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_WindowsProgramming"] }
