[package]
name = "systemd-journal-sdk-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Optional host identity and monotonic timestamp helpers for the systemd journal SDK"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/systemd-journal-sdk-host"
readme = "../../../README.md"
keywords = ["systemd", "journal", "logging", "sdk"]
categories = ["filesystem", "parser-implementations"]

[lib]
name = "journal_host"

[lints]
workspace = true

[dependencies]
journal-common = { workspace = true }

uuid = { workspace = true, features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
tempfile = { workspace = true }
