[package]
name = "systemd-journal-sdk-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Index structures and query helpers for the pure Rust systemd journal SDK"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/systemd-journal-sdk-index"
readme = "../../../README.md"
keywords = ["systemd", "journal", "logging", "sdk"]
categories = ["filesystem", "parser-implementations"]

[lib]
name = "journal_index"

[lints]
workspace = true

[features]
allocative = [
    "dep:allocative",
    "journal-core/allocative",
    "journal-common/allocative"
]

[dependencies]
regex = { workspace = true }
roaring = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

journal-core = { workspace = true }
journal-common = { workspace = true }
journal-registry = { workspace = true }

allocative = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
