[package]
license = "GPL-3.0-or-later"
name = "journal-log-writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
journal-common = { workspace = true }
journal-core = { workspace = true }
journal-registry = { workspace = true }

uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
thiserror = { workspace = true }
itoa = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
serde-api = ["serde", "serde_json"]

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
