[package]
name = "systemd-journal-sdk-log-writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "High-level pure Rust systemd journal directory writer"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/systemd-journal-sdk-log-writer"
readme = "../../../README.md"
keywords = ["systemd", "journal", "logging", "sdk"]
categories = ["filesystem", "parser-implementations"]

[lib]
name = "journal_log_writer"

[lints]
workspace = true

[dependencies]
journal-common = { workspace = true }
journal-core = { workspace = true }
journal-registry = { workspace = true }

uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
thiserror = { workspace = true }
itoa = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
serde-api = ["serde", "serde_json"]

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
