[package]
name = "systemd-journal-sdk-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Directory registry primitives for the pure Rust systemd journal SDK"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/systemd-journal-sdk-registry"
readme = "README.md"
keywords = ["systemd", "journal", "logging", "sdk"]
categories = ["filesystem", "parser-implementations"]

[lib]
name = "journal_registry"

[lints]
workspace = true

[features]
allocative = ["dep:allocative", "journal-common/allocative"]

[dependencies]
notify = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
walkdir = { workspace = true }

journal-common = { workspace = true }

allocative = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
