[package]
license = "GPL-3.0-or-later"
name = "journal_reader_ffi"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
error = { path = "../error" }
journal_file = { path = "../journal_file" }
memmap2 = { workspace = true }
serde_json = { workspace = true }
sigbus = { path = "../sigbus" }

[build-dependencies]
cbindgen = "0.28.0"

[lib]
crate-type = ["staticlib"]

[dev-dependencies]
tempfile = { workspace = true }
