[package]
name = "corpus_digest"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
journal = { package = "systemd-journal-sdk", path = "../../../journal" }
journal-core.workspace = true
serde_json.workspace = true
sha2.workspace = true
