[package]
name = "corpus_regenerate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
journal = { path = "../../../journal" }
journal-core.workspace = true
journal-registry.workspace = true
serde_json.workspace = true
uuid.workspace = true
