[package]
name = "dataset_ingester"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
journal-core.workspace = true
journal-registry.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
