[package]
name = "livewriter"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
journal = { package = "systemd-journal-sdk", path = "../../../journal" }
journal-core.workspace = true
uuid.workspace = true
