[package]
name = "netdata_function_wrapper"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
journal = { package = "systemd-journal-sdk", path = "../../../journal" }
serde_json.workspace = true
