[package]
name = "reader_core_bench"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
journal = { package = "systemd-journal-sdk", path = "../../../journal" }
journal-core.workspace = true
serde_json.workspace = true
